# political-bias-detection

./: .gitignore  HOWTO_EVAL.md  main.py  pyproject.toml  requirements-hpc.txt  requirements.txt  speaker_cache.json  vllm.def
extraction/: bundestag-api.py
logs/: evaluation_logs.jsonl
logs/batch_runs/: run_tests.md
logs/batch_runs/2026-06-12/: logs_info.md
logs/batch_runs/2026-06-23_2a642219/: logs_info.md
logs/batch_runs/2026-07-15_eval_20260715_164153/: logs_info.md
logs/batch_runs/2026-07-15_eval_20260715_182937/: logs_info.md
rag/: eval_chunker.py  evaluator.py  process_data.py  retrieval.py  run_eval.ipynb
rag/ingest/: __init__.py  _semantic_chunker.py  chunker.py  config.py  embedders.py  ingest.py  schema.py
results/2026-06-15/: evaluation_metrics.csv  rag_delta.csv
slurm/: 00_chunk.sbatch  01_qdrant.sbatch  02_vllm_qwen3.sbatch  03_vllm_serve.sbatch  10_ingest_e5.sbatch  11_ingest_bge.sbatch  12_ingest_jina.sbatch  13_ingest_qwen3.sbatch  20_eval_norag.sbatch  21_eval_e5.sbatch  21_eval_test.sbatch  22_eval_bge.sbatch  23_eval_jina.sbatch  24_eval_qwen3.sbatch  qdrant_ensure.sh  setup_torch_compat.sh  setup_venv.sh  vllm_ensure.sh
src/: debug_rag_pipeline.py  evaluate_metrics.py  run_batch.py  run_streamlit.py  streamlit.py
src/datasets/: DATASET_DOCUMENTATION.md  dataset_final_merged_with_mbfc_labels_without_duplicates_index_reset_anonymized_5_party_labels_media_labels_author_labels_stance_labels.csv  political_bias_articles_dataset.csv
src/logging/: log_run.py
src/prediction/: bias_prediction.py
(+1197 files in other folders)
