[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.72.0",
    "mistralai>=2.3.2",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "streamlit>=1.56.0",
]
