[project]
name = "evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.72.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.9",
    "mistralai>=2.3.2",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "tenacity>=9.1.4",
]
